responsive spacing fixed

--- a/web-gui/src/app/login/login.component.scss
+++ b/web-gui/src/app/login/login.component.scss
@@ -1,3 +1,5 @@
+@import "../../styles";
+
 .heroimage {
     position: absolute;
     width: 100%;
@@ -23,5 +25,6 @@
 }
 
 .login-card {
+    @extend .card;
     background-color: rgba(0, 0, 0, 0.4);
 }
